--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -30,7 +30,7 @@
                     </td>
                     <td>
                         <p class="text-muted text-right">
-                            Зроблено ІТ-волонтерами України
+                            Зроблено ІТ-волонтерами
                         </p>
                     </td>
                 </tr>
