--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,23 +1,23 @@
 <footer class="footer">
-	<div class="container">
+	<div class="container" style="line-height: 30px;">
             <table style="width: 100%">
                 <tr>
                     <td>
                         <!--p class="text-muted text-left"-->
                         <table>
                             <tr>
-                                <td>
+                                <td style="width:200px;">
                                     <p class="text-muted text-center">
                                         <a href="#">Державним органам:
                                             <br>додати свою послугу</a> 
                                     </p>
                                 </td>
-                                <td>
+                                <td style="width:200px;">
                                     <p class="text-muted text-center">
                                         <a href="#">Немає якоїсь
                                             <br>послуги?</a> 
                                     </p>
-                                </td>
+                                </td style="width:200px;">
                                 <td>
                                     <p class="text-muted text-center">
                                         <a href="#">Новини порталу
