--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<div class="container" style="line-height: 30px;">
+	<div class="container" style="margin-top: 10px;margin-bottom: 5px; line-height: 20px;">
             <table style="width: 100%">
                 <tr>
                     <td>
