--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -25,7 +25,7 @@
 				</li>
 				<li style="height: 90px;" class="menu-item" ui-sref-active="selected">
 					<a style="margin-top: 5px;" ui-sref="documents">
-						<h4>Мої документи</h4>
+						<h4>Документи</h4>
 					</a>
 				</li>
 				<li style="height: 90px;" class="menu-item" ui-sref-active="selected">
