--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -8,19 +8,19 @@
                             <tr>
                                 <td style="width:200px;">
                                     <p class="text-muted text-center">
-                                        <a href="#">Державним органам:
+                                        <a href="https://docs.google.com/forms/d/1uXt5BEVAWBhftuDNWQTUUJJp_etYKhXyh70kCdznCqY/viewform">Державним органам:
                                             <br>додати свою послугу</a> 
                                     </p>
                                 </td>
                                 <td style="width:200px;">
                                     <p class="text-muted text-center">
-                                        <a href="#">Немає якоїсь
+                                        <a href="https://docs.google.com/forms/d/1zyLyRcsL0wnB_VQeondrULHsEUi1dIaUSLJVWsdzbDY/viewform">Немає якоїсь
                                             <br>послуги?</a> 
                                     </p>
                                 </td style="width:200px;">
                                 <td>
                                     <p class="text-muted text-center">
-                                        <a href="#">Новини порталу
+                                        <a href="https://www.facebook.com/igov.org.ua">Новини порталу
                                             <br>на Facebook</a> 
                                     </p>
                                 </td>
