Про портал https://igov.org.ua/about +Мерило Яника - дописать город: , Киев
Хидер и Футер
+Под “Зроблено ІТ-волонтерами” поставить второй строчкой текст: alpha-версія (так, интервалы строчек были такие же, как в ссылках слева)
+Убираем красный текст в шапке

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -17,8 +17,8 @@
                                         <a href="https://docs.google.com/forms/d/1zyLyRcsL0wnB_VQeondrULHsEUi1dIaUSLJVWsdzbDY/viewform">Немає якоїсь
                                             <br>послуги?</a> 
                                     </p>
-                                </td style="width:200px;">
-                                <td>
+                                </td>
+                                <td style="width:200px;">
                                     <p class="text-muted text-center">
                                         <a href="https://www.facebook.com/igov.org.ua">Новини порталу
                                             <br>на Facebook</a> 
@@ -31,6 +31,7 @@
                     <td>
                         <p class="text-muted text-right">
                             Зроблено ІТ-волонтерами
+                            <br>alpha-версія
                         </p>
                     </td>
                 </tr>
