--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -12,7 +12,7 @@
 		</div>
                 <div class="navbar-header">
 			<br>
-			<p class="sitename" style="color:red;">Увага: сайт в процесі розробки!</p>
+			<p class="sitename" style="display: none; color:red;">Увага: сайт в процесі розробки!</p>
 		</div>
             
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
