margin-right: 5px;

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -1290,7 +1290,8 @@ label .snippet {
 }
 
 .index-services-count .index-services-count-item {
-    margin-right: 30px;
+    /*margin-right: 30px;*/
+    margin-right: 5px;
 }
 
 .index-services-count .index-services-count-item:last-child {
@@ -1300,3 +1301,4 @@ label .snippet {
 .pluso-counter {
     left:-20px;
 }
+
