Помилка або баг на Порталі?

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -24,6 +24,14 @@
                                             <br>на Facebook</a> 
                                     </p>
                                 </td>
+                                <td style="width:200px;">
+                                    <p class="text-muted text-center">
+                                        <a href="https://docs.google.com/forms/d/1ueU6PQa-OSA2Tsisxx2RbRWRJ9rLsFlPBlHsr7W-4gE/viewform">Помилка або баг
+                                            <br>на Порталі?</a> 
+                                    </p>
+                                </td>
+                                
+                                
                             </tr>
                         </table>
                         <!--/p-->
