user can now use bank id once while session is alive when navigating between documents and journal

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -24,12 +24,12 @@
 					</a>
 				</li>
 				<li style="height: 90px;" class="menu-item" ui-sref-active="selected">
-					<a style="margin-top: 5px;" ui-sref="documents">
+					<a style="margin-top: 5px;" ui-sref="documents" ui-sref-opts="{reload: true}">
 						<h4>Документи</h4>
 					</a>
 				</li>
 				<li style="height: 90px;" class="menu-item" ui-sref-active="selected">
-					<a style="margin-top: 5px;" ui-sref="journal">
+					<a style="margin-top: 5px;" ui-sref="journal" ui-sref-opts="{reload: true}">
 						<h4>Мій журнал</h4>
 					</a>
 				</li>
