https://github.com/e-government-ua/i/issues/405

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -34,6 +34,17 @@
                                         <br>на Порталі?</a>
                                 </p>
                             </td>
+                            
+                            <td style="width:200px;">
+                                <p class="text-muted text-center">
+                                    <a href="https://github.com/e-government-ua/i/wiki/%D0%AF%D0%BA-%D0%BF%D0%BE%D1%87%D0%B0%D1%82%D0%B8-%D1%80%D0%BE%D0%B1%D0%BE%D1%82%D1%83">Приєднатись
+                                        <br>на GitHub!</a>
+                                </p>
+                            </td>
+                            
+ 
+
+                            
 
 
                         </tr>
