--- a/central-js2/client/app/app.scss
+++ b/central-js2/client/app/app.scss
@@ -9,14 +9,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
  */
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 // Component styles are injected through grunt
 // injector
-@import 'main/main.scss';
+@import 'temp/main.scss';
 @import 'modal/modal.scss';
 // endinjector
