--- a/dashboard-js/client/components/print/PrintModal.css
+++ b/dashboard-js/client/components/print/PrintModal.css
@@ -27,25 +27,30 @@
   max-height: 90%;
 }
 
-.ng-modal-dialog-content-view {
-  overflow-y: auto;
-  height: 500px;
+.ng-modal-header {
+  width: 100%;
+  height: 30px;
 }
 
-.ng-modal-dialog-content {
-  padding:10px;
-  text-align: left;
-}
 .ng-modal-close {
-  position: absolute;
-  top: 3px;
-  right: 5px;
-  padding: 5px;
+  padding: 7px;
   cursor: pointer;
   font-size: 120%;
   display: inline-block;
   font-weight: bold;
   font-family: 'arial', 'sans-serif';
+  float: right;
+}
+
+.ng-modal-dialog-content-view {
+  overflow-y: auto;
+  height: 500px;
+  width: 99%;
+}
+
+.ng-modal-dialog-content {
+  padding:10px;
+  text-align: left;
 }
 
 .ng-modal-dialog-print-button {
