--- a/dashboard-js/client/app/main/main.css
+++ b/dashboard-js/client/app/main/main.css
@@ -22,6 +22,14 @@
     background: #4393B9;
 }
 
+.hero-unit-heading {
+    font-weight: bold;
+}
+
+.login-form-row {
+    margin-top: 30px;
+}
+
 .footer {
     text-align: center;
     padding: 30px 0;
