Dashboard. Background-color change for login button
Now background color for login button is same across all browsers

--- a/dashboard-js/client/app/main/main.css
+++ b/dashboard-js/client/app/main/main.css
@@ -30,6 +30,14 @@
     margin-top: 30px;
 }
 
+.btn-login {
+  background-color: #aaa;
+}
+
+.btn-login:hover {
+  background-color: #ccc;
+}
+
 .footer {
     text-align: center;
     padding: 30px 0;
