--- a/central-js/client/app/app.scss
+++ b/central-js/client/app/app.scss
@@ -1350,6 +1350,6 @@ label .snippet {
 /** 
  * Validation Styles 
  */
-input .ng-invalid {
-  border: 2px solid #ffd;
-}
+/* input.ng-invalid {
+  border: 2px solid #e10;
+}*/
