--- a/central-js/client/app/common/components/errors/templates/errors.html
+++ b/central-js/client/app/common/components/errors/templates/errors.html
@@ -1,6 +1,6 @@
 <div style="padding:0 1em;">
   <div ng-repeat="error in errors track by $index" class="alert alert-{{error.type}} alert-dismissible fade in" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="close(error)"><span aria-hidden="true">×</span></button>
-    {{error.text}}
+    <strong style="text-transform:uppercase;" ng-if="error.warn">{{error.warn}} </strong>{{error.text}}
   </div>
 </div>
