added email validation to ServiceBuiltInBankIDController

--- a/central-js/client/app/app.scss
+++ b/central-js/client/app/app.scss
@@ -1365,3 +1365,6 @@ input.ng-invalid-email {
   border: 2px solid $invalid-input-border-color;
   background-color: $invalid-input-bg-color;
 }
+.validation-message {
+  color: #a94442;
+}
