minor style changes

--- a/central-js/client/app/app.scss
+++ b/central-js/client/app/app.scss
@@ -4,9 +4,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'font-awesome/scss/font-awesome';
 
-// Validation style
+/** 
+ * Variables to share some values
+ */
+
 $invalid-input-bg-color: #fcc;
 $invalid-input-border-color: #e10;
+$invalid-label-text-color: #a94442;
+
 
 /**
  * App-wide Styles
@@ -652,7 +657,7 @@ label .snippet {
 }
 
 .error {
-  color: red;
+  color: $invalid-label-text-color;
 }
 
 html {
@@ -1294,10 +1299,6 @@ label .snippet {
   padding-top: 15px;
 }
 
-.error {
-  color: red;
-}
-
 .service-description {
   border-top: 1px solid #ddd;
   margin: 10px -15px;
@@ -1351,6 +1352,14 @@ label .snippet {
   padding-left:30px;
 }
 
+.site-preloader {
+  margin-top: 5em;
+}
+
+.section-preloader {
+  margin-top: 5em;
+}
+
 /** 
  * Validation Styles 
  */
@@ -1362,9 +1371,9 @@ label .snippet {
   }
 }
 input.ng-invalid-email {
-  border: 2px solid $invalid-input-border-color;
+  border: 1px solid $invalid-input-border-color;
   background-color: $invalid-input-bg-color;
 }
 .validation-message {
-  color: #a94442;
+  color: $invalid-label-text-color;
 }
