--- a/central-js/client/app/app.scss
+++ b/central-js/client/app/app.scss
@@ -4,10 +4,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'font-awesome/scss/font-awesome';
 
-// Validation style
-$invalid-input-bg-color: #fcc;
-$invalid-input-border-color: #e10;
-
 /**
  * App-wide Styles
  */
@@ -652,7 +648,7 @@ label .snippet {
 }
 
 .error {
-  color: red;
+  color: $invalid-label-text-color;
 }
 
 html {
@@ -1294,10 +1290,6 @@ label .snippet {
   padding-top: 15px;
 }
 
-.error {
-  color: red;
-}
-
 .service-description {
   border-top: 1px solid #ddd;
   margin: 10px -15px;
@@ -1351,9 +1343,17 @@ label .snippet {
   padding-left:30px;
 }
 
+.site-preloader, .section-preloader {
+  margin-top: 5em;
+}
+
 /**
 * Validation Styles Start
 */
+
+$invalid-input-bg-color: #fcc;
+$invalid-input-border-color: #e10;
+$invalid-label-text-color: #a94442;
 
 .email-absent-form {
   margin-top: 44px;
@@ -1362,12 +1362,12 @@ label .snippet {
   }
 }
 
-input.ng-invalid-email {
-  border: 2px solid $invalid-input-border-color;
+input.ng-invalid-email, input.ng-invalid-tel  {
+  border: 1px solid $invalid-input-border-color;
   background-color: $invalid-input-bg-color;
 }
 .validation-message {
-  color: #a94442;
+  color: $invalid-label-text-color;
 }
 
 /* Override the path to flags.png for intlTelInput */
@@ -1378,7 +1378,7 @@ input.ng-invalid-email {
   /* flags@2x.png for retina devices: */ 
 
   @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-    background-image: url("/assets/images/icons/flags@2x1.png");
+    background-image: url("/assets/images/icons/flags@2x.png");
   }
 }
 
