--- a/dashboard-js/client/components/print/PrintModal.css
+++ b/dashboard-js/client/components/print/PrintModal.css
@@ -1,34 +1,35 @@
 .ng-modal-overlay {
   /* A dark translucent div that covers the whole screen */
-  position:absolute;
-  z-index:9999;
+  position: fixed;
+  z-index: 9999;
   top:0;
   left:0;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   background-color:#000000;
   opacity: 0.8;
 }
+
 .ng-modal-dialog {
   /* A centered div above the overlay with a box shadow. */
   z-index:10000;
-  position: absolute;
-  width: 50%; /* Default */
-
-  /* Center the dialog */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-
+  position: fixed;
+  max-width: 60%;
+  display: inline-block;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   background-color: #fff;
   box-shadow: 4px 4px 80px #000;
   max-height: 90%;
+  padding-bottom:20px;
+  width: auto !important;
 }
 
+
 .ng-modal-header {
-  width: 100%;
   height: 30px;
 }
 
@@ -44,13 +45,13 @@
 
 .ng-modal-dialog-content-view {
   overflow-y: auto;
-  height: 500px;
-  width: 99%;
+  max-height: 88%;
 }
 
 .ng-modal-dialog-content {
   padding:10px;
   text-align: left;
+  display: inline;
 }
 
 .ng-modal-dialog-print-button {
