#604: Almost done with everything except slots generation

--- a/dashboard-js/client/app/app.css
+++ b/dashboard-js/client/app/app.css
@@ -57,7 +57,7 @@
  }
 
 /**
-* Spacers from bootstrap 4 https://github.com/twbs/bootstrap/issues/4286
+* Vertical spacers from bootstrap 4 https://github.com/twbs/bootstrap/issues/4286
 */
 .spacer5 { height: 5px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
 .spacer10 { height: 10px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
