перенесення функціоналу із контролера до сервісу places.service.js (wip-6)

--- a/central-js/client/app/common/components/form/directives/place/place.html
+++ b/central-js/client/app/common/components/form/directives/place/place.html
@@ -1,19 +1,30 @@
 <div class="list-group-item place-control" ng-class="{'disabled': cityIsChosen()}">
     <div class="row no-margin-bottom">
         <div class="col-md-11 form-inline">
-            <span class="step">Крок 1. Оберіть свій регіон <sup>{{getStateName() + '-' + getRegionId() + ':' + getCityId()}}</sup></span>
+            <span class="step">Крок 1. Оберіть свій регіон <sup>{{getStateName() + ':' + getRegionId() + ':' + getCityId()}}</sup></span>
             <div class="inline-wrapper">
                 <span>Область</span>
                 <div class="dropdown-wrapper" dropdown is-open="regionList.dropdown.isOpen">
                     <div class="input-group">
-                        <input autocomplete="off" class="form-control" name="region" type="text" ng-model="regionList.typeahead.model" typeahead="region as region.sName for region in loadRegionList($viewValue)" typeahead-on-select="onSelectRegionList($item)" typeahead-template-url="app/service/region/typeahead-match-region.html" typeahead-empty ng-disabled="cityIsChosen()" />
+                        <input 
+                            autocomplete="off" 
+                            class="form-control" 
+                            name="region" 
+                            type="text" 
+                            min-length="3"
+                            ng-model="regionList.typeahead.model" 
+                            typeahead="region as region.sName for region in loadRegionList($viewValue)" 
+                            typeahead-on-select="onSelectRegionList($item)" 
+                            typeahead-template-url="app/service/region/typeahead-match-region.html" 
+                            typeahead-empty 
+                            ng-disabled="cityIsChosen()" />
                         <span class="input-group-btn">
-                          <button class="btn btn-default"
-                                        type="button"
-                                        ng-disabled="cityIsChosen()"
-                                        dropdown-toggle>
-                                    <span class="caret"></span>
-                        </button>
+                            <button class="btn btn-default"
+                                    type="button"
+                                    ng-disabled="cityIsChosen()"
+                                    dropdown-toggle>
+                                <span class="caret"></span>
+                            </button>
                         </span>
                     </div>
                     <ul class="dropdown-menu" role="menu">
@@ -21,20 +32,31 @@
                             <a ng-click="onSelectRegionList(region, null, null)" ng-class="{'color-green': (region.color == 'green')}">{{region.sName}}</a>
                         </li>
                     </ul>
-                </div>
-            </div>
+                </div> <!-- div class="dropdown-wrapper" dropdown  -->
+            </div> <!-- <div class="inline-wrapper"> -->
             <div class="inline-wrapper" ng-if="regionIsChosen()">
-                <span> Місто</span>
+                <span>Місто</span>
                 <div class="dropdown-wrapper" dropdown is-open="localityList.dropdown.isOpen">
                     <div class="input-group">
-                        <input autocomplete="off" class="form-control" name="city" type="text" ng-model="localityList.typeahead.model" typeahead="city as city.sName for city in loadLocalityList($viewValue)" typeahead-on-select="onSelectLocalityList($item)" typeahead-template-url="app/service/city/typeahead-match-city.html" typeahead-empty ng-disabled="cityIsChosen()" />
+                        <input 
+                            autocomplete="off" 
+                            class="form-control" 
+                            name="city" 
+                            type="text" 
+                            min-length="3"
+                            ng-model="localityList.typeahead.model" 
+                            typeahead="city as city.sName for city in loadLocalityList($viewValue)" 
+                            typeahead-on-select="onSelectLocalityList($item)" 
+                            typeahead-template-url="app/service/city/typeahead-match-city.html" 
+                            typeahead-empty 
+                            ng-disabled="cityIsChosen()" />
                         <span class="input-group-btn">
                             <button class="btn btn-default"
                                     type="button"
                                     ng-disabled="cityIsChosen()"
                                     dropdown-toggle>
-                              <span class="caret"></span>
-                        </button>
+                                <span class="caret"></span>
+                            </button>
                         </span>
                     </div>
                     <ul class="dropdown-menu" role="menu" ng-show="localityList.dropdown.list.length > 0">
@@ -42,8 +64,8 @@
                             <a ng-click="onSelectLocalityList(city, null, null)" ng-class="{'color-green': (city.color == 'green')}">{{city.sName}}</a>
                         </li>
                     </ul>
-                </div>
-            </div>
+                </div> <!-- div class="dropdown-wrapper" dropdown  -->
+            </div> <!-- <div class="inline-wrapper"> -->
             <div class="inline-wrapper" ng-if="data.region">
                 <a class="ctrls-admin ctrls-srvc-edit" href="" ng-if="bAdmin" title="Редагувати послугу в цьому регіоні"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
                 <a class="ctrls-admin ctrls-srvc-remove" href="" ng-if="bAdmin" title="Видалити послугу в цьому регіоні"><span class="glyphicon glyphicon-remove"></span> Видалити</a>
@@ -51,7 +73,7 @@
         </div>
         <div class="col-md-1" ng-if="cityIsChosen()">
             <div class="link-button">
-                <a href="#" ng-click="edit()">Змінити</a>
+                <a href="#" ng-click="onEditPlace()">Змінити</a>
             </div>
         </div>
     </div>
